CS232 - Programming Languages/Lab7/Task1/Terminal Saved Output.txt
Last login: Mon Mar 14 18:44:42 on ttys000
Roberts-MBP-2:~ RobertFlorence$ cd Desktop/CS232/LAB7/
Roberts-MBP-2:LAB7 RobertFlorence$ lex l7t1.l
Roberts-MBP-2:LAB7 RobertFlorence$ gcc lex.yy.c l7t1.c -o l7t1
l7t1.c:16:9: error: use of undeclared identifier 'counter'
        counter[i]=0;
        ^
l7t1.c:39:31: error: use of undeclared identifier 'count'
    sum_of_num = sum(sumarray,count);
                              ^
2 errors generated.
Roberts-MBP-2:LAB7 RobertFlorence$ gcc lex.yy.c l7t1.c -o l7t1
Roberts-MBP-2:LAB7 RobertFlorence$ ./l7t1 <l7t1in.txt
The word: bank has 
My word: budget encompasses 
the car cost a thousand word: dollars
the word: investment in the word: stock and word: bond helped word: fund the new carSum is: 721430854
Roberts-MBP-2:LAB7 RobertFlorence$ ./l7t1
the sum is
the sum is
$500

bank
word: bank
wow
wow
Sum is: 562046969
Roberts-MBP-2:LAB7 RobertFlorence$ lex l7t1.l
Roberts-MBP-2:LAB7 RobertFlorence$ gcc lex.yy.c l7t1.c -o l7t1
Roberts-MBP-2:LAB7 RobertFlorence$ ./l7t1 <l7t1in.txt
The word: bank has 
My word: budget encompasses 
the car cost a thousand word: dollars
the word: investment in the word: stock and word: bond helped word: fund the new car
word: financially we have  to our name
we need to go to the word: bank to deposit 
we are trying to raise proper word: funding to increase our word: budget
John plays the word: stock market when he works at the word: bank
POTENTIALLY INTERESTING READING!!!
Sum is: 950
OCCURENCES:
bank: 3
dollar: 1
financ: 1
budget: 2
fund: 2
stock: 2
bond: 1
invest: 1
Roberts-MBP-2:LAB7 RobertFlorence$ 
Roberts-MBP-2:LAB7 RobertFlorence$ lex l7t1.l
Roberts-MBP-2:LAB7 RobertFlorence$ gcc lex.yy.c l7t1.c -o l7t1
Roberts-MBP-2:LAB7 RobertFlorence$ ./l7t1 <l7t1in.txt
The bank has 100
My budget encompasses 500
the car cost a thousand dollars
the investment in the stock and bond helped fund the new car
financially we have 200 to our name
we need to go to the bank to deposit 150
we are trying to raise proper funding to increase our budget
John plays the stock market when he works at the bank
POTENTIALLY INTERESTING READING!!!
Sum is: 950
OCCURENCES:
bank: 3
dollar: 1
financ: 1
budget: 2
fund: 2
stock: 2
bond: 1
invest: 1
Roberts-MBP-2:LAB7 RobertFlorence$ gcc lex.yy.c l7t1.c -o l7t1
Roberts-MBP-2:LAB7 RobertFlorence$ ./l7t1 <l7t1in.txt
The bank has 100
My budget encompasses 500
the car cost a thousand dollars
the investment in the stock and bond helped fund the new car
financially we have 200 to our name
we need to go to the bank to deposit 150
we are trying to raise proper funding to increase our budget
John plays the stock market when he works at the bank

POTENTIALLY INTERESTING READING!!!
Sum is: 950
OCCURENCES:
bank: 3
dollar: 1
financ: 1
budget: 2
fund: 2
stock: 2
bond: 1
invest: 1
Roberts-MBP-2:LAB7 RobertFlorence$ touch input2.txt
Roberts-MBP-2:LAB7 RobertFlorence$ ./l7t1 <l7t1in2.txt
The bank has 100
My budget encompasses 500
the car cost 1000
the investment in the stock and bond helped fund the new car
financially we have 200 to our name
we need to go to the bank to deposit 150
we are trying to raise proper funding to increase our budget
John plays the stock market when he works at the bank

VERY INTERESTING READING!
Reported Sum is: 1950
Roberts-MBP-2:LAB7 RobertFlorence$ it works fully!
-bash: it: command not found
Roberts-MBP-2:LAB7 RobertFlorence$ 
